src/objects/Patient_Document__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Patient Documents</relationshipLabel>
        <relationshipName>Patient_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Collect_From__c</fullName>
        <label>Collect From</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Online Form</fullName>
                </value>
                <value>
                    <fullName>Patient</fullName>
                </value>
                <value>
                    <fullName>Physician</fullName>
                </value>
                <value>
                    <fullName>Caseworker</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Doc_Type__c</fullName>
        <label>Doc Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PIAF</fullName>
                </value>
                <value>
                    <fullName>CMN</fullName>
                </value>
                <value>
                    <fullName>T1D Note</fullName>
                </value>
                <value>
                    <fullName>Claim Form</fullName>
                </value>
                <value>
                    <fullName>A1c</fullName>
                </value>
                <value>
                    <fullName>BG Logs</fullName>
                </value>
                <value>
                    <fullName>CGM Quest</fullName>
                </value>
                <value>
                    <fullName>LIC</fullName>
                </value>
                <value>
                    <fullName>Pregnancy Rx</fullName>
                </value>
                <value>
                    <fullName>Narrative Letter</fullName>
                </value>
                <value>
                    <fullName>ODSP Info Form</fullName>
                </value>
                <value>
                    <fullName>NIHB Claim Form</fullName>
                </value>
                <value>
                    <fullName>NIHB Estimate</fullName>
                </value>
                <value>
                    <fullName>Prior-Auth Form</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDoc_To_Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PDoc To Opportunity</label>
        <referenceTo>PDoc_To_Opportunity__c</referenceTo>
        <relationshipLabel>Patient Documents</relationshipLabel>
        <relationshipName>Patient_Documents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Received_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Sent_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Not Sent</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Not Required</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Patient Document</label>
    <nameField>
        <displayFormat>PDOC-{00000}</displayFormat>
        <label>PDOC</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>